--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "veccal",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Basic vector calculation functions.",
   "main": "lib",
-  "scripts": {
-    "build": "./ci/build.js",
-    "test": "./ci/test.js",
-    "cover": "./ci/cover.js",
-    "report": "./ci/report.js"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -42,5 +36,8 @@
     "coz": "^3.0.13",
     "coz-tmpl": "^1.0.4",
     "extend": "^3.0.0"
+  },
+  "dependencies": {
+    "numcal": "^1.1.2"
   }
 }
