--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "veccal",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Basic vector calculation functions.",
   "main": "lib",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "./ci/build.js",
+    "test": "./ci/test.js",
+    "cover": "./ci/cover.js",
+    "report": "./ci/report.js"
   },
   "repository": {
     "type": "git",
