--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "veccal",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Basic vector calculation functions.",
   "main": "lib",
   "scripts": {
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/okunishinishi/node-veccal",
   "devDependencies": {
-    "ape-compiling": "^1.0.3",
-    "ape-covering": "^1.0.8",
-    "ape-releasing": "^1.0.14",
-    "ape-reporting": "^1.0.8",
-    "ape-tasking": "^1.0.7",
-    "ape-testing": "^1.3.2",
-    "ape-tmpl": "^1.1.0",
-    "ape-updating": "^1.0.1",
-    "coz": "^3.0.13",
-    "coz-tmpl": "^1.0.4",
-    "extend": "^3.0.0"
+    "ape-compiling": "*",
+    "ape-covering": "*",
+    "ape-releasing": "*",
+    "ape-reporting": "*",
+    "ape-tasking": "*",
+    "ape-testing": "*",
+    "ape-tmpl": "*",
+    "ape-updating": "*",
+    "coz": "*",
+    "coz-tmpl": "*",
+    "extend": "*"
   },
   "dependencies": {
-    "numcal": "^1.1.2"
+    "numcal": "^1.1.3"
   }
 }
