--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.2",
   "description": "Basic vector calculation functions.",
   "main": "lib",
-  "browser": "sims/browser",
+  "browser": "shim/browser",
   "scripts": {
     "test": "./ci/test.js",
     "prepublish": "./ci/build.js && ./ci/browser.js"
@@ -24,19 +24,18 @@
   },
   "homepage": "https://github.com/okunishinishi/node-veccal",
   "dependencies": {
-    "numcal": "^3.1.2"
+    "numcal": "^3.1.3"
   },
   "devDependencies": {
-    "ababel": "^1.0.5",
-    "ape-covering": "^3.0.3",
+    "ababel": "^1.0.21",
+    "ababel-es2015": "^1.0.2",
+    "amocha": "^1.0.8",
     "ape-releasing": "^4.0.2",
     "ape-reporting": "^3.0.1",
-    "ape-tasking": "^4.0.3",
-    "ape-testing": "^4.0.1",
-    "ape-tmpl": "^5.0.13",
+    "ape-tasking": "^4.0.7",
+    "ape-tmpl": "^5.0.14",
     "ape-updating": "^4.0.4",
-    "babel-preset-es2015": "^6.9.0",
-    "coz": "^6.0.7"
+    "coz": "^6.0.14"
   },
   "engines": {
     "node": ">=6",
